# KimiK3Manim

./: .env.template  .gitignore  CLAUDE.md  README.md  config.py  kimi_client.py  mcp_server.py  pyproject.toml  requirements.txt  resume_pipeline.py
BrownianMotion/: pyproject.toml
Dakota/: dakota_star_map.py  imagined_prompt.md
data/mythos_runs/20260708-142633-invent-and-render-a-new-true-3d-mathematical-fil/: mythos_scene.py
data/mythos_runs/20260708-152026-invent-and-render-a-new-true-3d-mathematical-fil/: mythos_scene.py
data/mythos_runs/20260708-180241-create-a-new-true-3d-mythos-manim-film-on-an-arc/: mythos_scene.py
data/mythos_runs/20260708-183057-build-an-epic-cinematic-proof-journey-through-mo/: mythos_scene.py
dev/: make_flywheel_asset.py  validate_dataset.py  validate_render_reward.py
docs/: K3_EPIC_VISUALIZER_RL_BLUEPRINT.md  KIMI_K3_REBUILD_PLAN.md  PYTHON_UPGRADE.md  SETUP.md
e2b_sandbox/: .env.template  README.md  sandbox_config.py
environments/math_to_manim/: README.md  pyproject.toml
k3_agents/: __init__.py  base.py  concept_scout.py  manim_coder.py  math_enricher.py  narrative_composer.py  render_critic.py  runtime.py  supervisor.py  visual_designer.py
manim_scenes/: bak_sneppen_3d.py  k3_harmonic_universe.py  k3_reverse_reasoning.py  melting_space.py
prompts/: RicciFlowFilm.tex
research/: manim_ce_3d_briefing.md  prime-intellect-rl-stack-briefing.md
rl/: __init__.py  build_dataset.py  mutation_engine.py  mythos_adapter.py
schemas/: __init__.py  artifacts.py
skills/kimi3manim/: SKILL.md
(+13 files in other folders)
