[project]
name = "kimik2manim"
version = "0.1.0"
description = "Kimi K2 thinking model integration for Manim animation generation"
requires-python = ">=3.13"
dependencies = [
    "kimi-agent-sdk>=0.0.5",
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "black>=26.3.1",
]
render = [
    "manim>=0.20",
]
